...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-Tt-fjI">
                                        <rect key="frame" x="8" y="8" width="45" height="45"/>
                                        <accessibility key="accessibilityConfiguration" identifier="like" label="like"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="45" id="2VO-q9-1Sy"/>
...
                                        <state key="normal" image="big_share"/>
                                        <connections>
                                            <action selector="share:" destination="3Uc-7d-MWS" eventType="touchUpInside" id="gh1-09-ifY"/>
                                        </connections>
                                    </button>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="40" id="Ylc-HG-3WS"/>
                                        </constraints>
                                        <state key="normal" image="send"/>
                                        <connections>
                                            <action selector="send_Comment:" destination="rTF-Ma-rfV" eventType="touchUpInside" id="Kgl-Ob-YRt"/>
...
                                                <button opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAr-Ij-RjR" customClass="ButtonY" customModule="Outdoor360" customModuleProvider="target">
                                                    <rect key="frame" x="8" y="5" width="40" height="40"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="image">
                                                        <accessibilityTraits key="traits" button="YES"/>
                                                    </accessibility>
...
                                                        <constraint firstAttribute="width" constant="80" id="LYY-pm-EdX"/>
                                                    </constraints>
                                                    <state key="normal" title="Post">
                                                        <color key="titleColor" red="0.070588235289999995" green="0.078431372550000003" blue="0.1529411765" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
...
                                            <rect key="frame" x="8" y="50" width="304" height="100"/>
                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <accessibility key="accessibilityConfiguration" identifier="captionText"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="100" id="ZRn-A9-k2I"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Tag" id="wRD-fi-wBl">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="9f9-Og-fMY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Comments" leftItemsSupplementBackButton="YES" id="Dzr-Iu-5mN">
                        <barButtonItem key="backBarButtonItem" title="Back" id="1yF-Zu-gQe"/>
                        <barButtonItem key="leftBarButtonItem" image="back" id="HgA-SS-7mD">
...
                        <outlet property="sendBtn" destination="dQL-I8-GIf" id="mUr-4g-I6k"/>
                        <outlet property="userImage" destination="dX4-We-GBG" id="OKA-pL-zRI"/>
                        <outlet property="userName" destination="Hr0-2c-pFR" id="whk-Ff-FN2"/>
                        <outlet property="writeText" destination="40R-Dn-6t8" id="A7d-j6-rv1"/>
                    </connections>
...
