...
        vc.content_type = "post"
        self.delegate?.push(VC: vc)
    }
    
    @objc func shareAction(_ sender : UIButton){
        
        let shareAlert = UIAlertController(title: "Select the social network you wish to share post on.", message: nil , preferredStyle: .actionSheet)
        shareAlert.modalPresentationStyle = .popover
        shareAlert.popoverPresentationController?.sourceView = self.viewContainingController()?.view
        shareAlert.popoverPresentationController?.sourceRect = CGRect(x: 0, y: 0, width: 1.0, height: 1.0)
        if NetworkController.front_user_id != "0"{
            shareAlert.addAction(UIAlertAction(title: "Share on Outdoors360", style: .default , handler: {_ in
                let alert = UIAlertController(title: "Share Post on Outdoors360", message: nil, preferredStyle: .alert)
                alert.modalPresentationStyle = .popover
                alert.addAction(UIAlertAction(title: "Share Now", style: .default, handler: { _ in
                    
                    let txtFeild = alert.textFields![0] as UITextField
                    self.Share(caption: txtFeild.text!)
//                    self.delegate?.ShareToYentna(post: self.data!, shareCaption: txtFeild.text!)
                    
                }))
                alert.addTextField(configurationHandler: {(txtF)-> Void in
                    txtF.placeholder = "Add Share Caption"
                })
                alert.addAction(UIAlertAction(title: "Cancel", style: .destructive, handler: nil))
                self.delegate?.present(VC: alert)
            }))
        }
        
        shareAlert.addAction(UIAlertAction(title: "Share to Social Network", style: .default , handler: {_ in
            
            let num = NetworkController.shared.random(digits: 8)
            let activityVC =  UIActivityViewController(activityItems: ["\(NetworkController.shareURL)\(String(num))\(self.post.id!)", self.singleImage?.image as Any], applicationActivities: nil)
            activityVC.modalPresentationStyle = .popover
            activityVC.excludedActivityTypes = [UIActivity.ActivityType.mail, UIActivity.ActivityType.message]
            self.delegate?.present(VC: activityVC)
...
        ]
        NetworkController.shared.Service(parameters: parameters, nameOfService: .DeletePost){
            response,_ in
            if response != JSON.null{
                if response["result"]["status"].boolValue == true{
                    let alert =  UIAlertController(title : "Successfully Deleted" , message : nil , preferredStyle :UIAlertController.Style.alert )
                    alert.addAction(UIAlertAction(title : "Ok" , style : UIAlertAction.Style.cancel , handler : nil))
                    self.delegate?.present(VC: alert)
                    self.delegate?.delete(index: self.index)
                    
                }else{
                    let alert =  UIAlertController(title : "\(response["result"]["description"].stringValue)" , message : nil, preferredStyle :UIAlertController.Style.alert )
                    alert.addAction(UIAlertAction(title : "Ok" , style : UIAlertAction.Style.cancel , handler : nil))
...
                "share_caption" : "\(caption)"
            ]
            NetworkController.shared.Service(parameters: parameters, nameOfService: .SharePost){[weak self] response,_ in
                if response != JSON.null {
                    if response["result"]["status"].boolValue == true{
                        self?.delegate?.share(post: self!.post!)
                        let alert =  UIAlertController(title : "Share Alert" , message : "Successfully Post Shared", preferredStyle :UIAlertController.Style.alert )
                        alert.addAction(UIAlertAction(title : "Ok" , style : UIAlertAction.Style.cancel , handler : nil))
                        self?.delegate?.present(VC: alert)
                    }else{
                        let alert =  UIAlertController(title : "\(String(describing: "\(response["result"]["description"].stringValue)"))" , message : nil, preferredStyle :UIAlertController.Style.alert )
                        alert.addAction(UIAlertAction(title : "Ok" , style : UIAlertAction.Style.cancel , handler : nil))
                        self?.delegate?.present(VC: alert)
...
