...
        refreshControl.addTarget(self, action: #selector(Refresh_Feeds(_:)) , for: .valueChanged)
        self.setImageForNavigation(imageFor: #imageLiteral(resourceName: "navigationHeader"))
        
        tableView.register(UINib( nibName: "SuggestedTableViewCell", bundle: nil), forCellReuseIdentifier: "suggestTableCell")
        tableView.register(UINib(nibName: "Feed_Cell", bundle: nil), forCellReuseIdentifier: Feed_Cell.identifier)
        tableView.isAccessibilityElement = true
        tableView.accessibilityIdentifier = "feedsList"
        //Share App Link Label
        let tapShare = UITapGestureRecognizer(target: self, action: #selector(shareRef(_:)))
        tapShare.numberOfTapsRequired = 1
        self.shareLabel.isUserInteractionEnabled = true
        self.shareLabel.addGestureRecognizer(tapShare)
        
...
    @objc func Refresh_Feeds(_ sender : Any){
        self.Refresh_Feeds(front_user_id: "\(NetworkController.front_user_id)")
    }
    
    func AddCreateBtn(){
        
        floatBtn.accessibilityLabel = "Plus Button"
        floatBtn.isAccessibilityElement = true
    
        floatBtn.buttonColor = #colorLiteral(red: 0.08938013762, green: 0.1059873924, blue: 0.2032674253, alpha: 1)
        floatBtn.buttonImageColor = #colorLiteral(red: 1, green: 1, blue: 1, alpha: 1)

        let post_btn = floatBtn.addItem()
...
            let navigationControlr = UINavigationController(rootViewController: vc)
            navigationControlr.modalPresentationStyle = .fullScreen
            self.present(navigationControlr, animated: true, completion: nil)
        }
        
        let album_btn = floatBtn.addItem()
        post_btn.accessibilityLabel = "Create Album"
        album_btn.isAccessibilityElement = true
        
        album_btn.titleLabel.text = "Create Album"
        album_btn.imageView.image = #imageLiteral(resourceName: "image")
        album_btn.buttonColor = #colorLiteral(red: 1, green: 1, blue: 1, alpha: 1)
        album_btn.buttonImageColor = #colorLiteral(red: 0.08938013762, green: 0.1059873924, blue: 0.2032674253, alpha: 1)
...
        if NetworkController.front_user_id != "0"{
            let containView = UIView(frame: CGRect(x: 0, y: 0, width: 40, height: 40))
            let imageview = UIImageView(frame: CGRect(x: 8, y: 5, width: 34, height: 34))
            imageview.contentMode = UIView.ContentMode.scaleAspectFill
            imageview.layer.borderColor = UIColor.white.cgColor
            imageview.layer.masksToBounds = true
            imageview.accessibilityIdentifier = "profile"
            imageview.isAccessibilityElement = true
            let tapGesture = UITapGestureRecognizer(target: self, action: #selector(self.imageTapped(_:)))
            imageview.addGestureRecognizer(tapGesture)
            imageview.isUserInteractionEnabled = true
            
            containView.addSubview(imageview)
...
