...
            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                <rect key="frame" x="0.0" y="0.0" width="358" height="173"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jpr-9Y-TAD" customClass="ButtonY" customModule="Outdoor360" customModuleProvider="target">
                        <rect key="frame" x="136" y="83" width="35" height="35"/>
                        <accessibility key="accessibilityConfiguration" identifier="speciesTag"/>
                        <constraints>
                            <constraint firstAttribute="height" constant="35" id="Xn4-3i-e6b"/>
                            <constraint firstAttribute="width" constant="35" id="vB0-RB-qtH"/>
                        </constraints>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                        <state key="normal" image="add"/>
...
                        <connections>
                            <action selector="add_Species:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="DTL-dz-CD6"/>
                        </connections>
                    </button>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ySG-0d-PMH" customClass="ButtonY" customModule="Outdoor360" customModuleProvider="target">
                        <rect key="frame" x="136" y="47" width="35" height="35"/>
                        <accessibility key="accessibilityConfiguration" identifier="peopleTag"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="35" id="Fnb-d4-bOk"/>
                            <constraint firstAttribute="height" constant="35" id="Hst-lZ-kno"/>
                        </constraints>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                        <state key="normal" image="tag"/>
...
                        <connections>
                            <action selector="tag_Btn:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ikA-bi-NaL"/>
                        </connections>
                    </button>
                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h0g-U1-MMH" customClass="ButtonY" customModule="Outdoor360" customModuleProvider="target">
                        <rect key="frame" x="136" y="11" width="35" height="35"/>
                        <accessibility key="accessibilityConfiguration" identifier="location"/>
                        <constraints>
                            <constraint firstAttribute="width" constant="35" id="MRq-fx-G7H"/>
                            <constraint firstAttribute="height" constant="35" id="U7F-PP-UJl"/>
                        </constraints>
                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                        <state key="normal" image="location"/>
...
